tests/rosetta/out/Java/binary-digits.error
javac error: exit status 1
/tmp/TestMochiToJavabinary-digits668772983/001/BinaryDigits.java:12: error: incompatible types: int cannot be converted to String
            x = (int)(Integer.parseInt((x / 2)));
                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
